# mockexchange-deck

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  stop_mockexchange.sh
app/: __init__.py  config.py  main.py
app/_pages/: __init__.py  _colors.py  _helpers.py  _row_colors.py  order_details.py  orders.py  performance.py  portfolio.py
app/pages/: __init__.py  _helpers.py  dashboard.py  orders.py  portfolio.py
app/services/: __init__.py  api.py  model.py
